--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/images/29.jpg");
+    background-image: url("/images/background.jpg");
     background-size: cover;
     height: auto;
 }
