add comments to code

--- a/js/templates/signin.html
+++ b/js/templates/signin.html
@@ -40,16 +40,7 @@
         <a class="underline" ng-click="vm.toggleValue = !vm.toggleValue;"><u>Sign Up</u></a>.
       </strong>
     </p>
-  </div> <!-- sign-in-form -->
-
-
-
-
-
-
-
-
-
+  </div>
 
 
   <div class="sign-up-form" ng-show="vm.toggleValue">
